--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,10 @@ background-color:white;
 .but.calc{
 	width:40px;
 	height:75px;
-	background-color:white;
+	background-color:orange;
 	float: right;
 	margin-right: 10px;
+
 }
 
 
